Correct spacing between tags

--- a/themes/timetree/assets/scss/components/_tags.scss
+++ b/themes/timetree/assets/scss/components/_tags.scss
@@ -4,6 +4,14 @@ $tag-color: (
   "active": #ffdacc,
 );
 
+.tags {
+  /* use flex to avoid unwanted space between tags caused by 
+    whitespace between tags in the markup */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .tags a {
   display: inline-block;
   text-decoration: none;
